[project]
name = "breakout"
version = "0.1.0"
description = "Training DQN agent to play Breakout using Gymanasium-ALE and pytorch"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ale-py>=0.11.2",
    "gymnasium[atari,other]>=1.2.3",
    "mlflow>=3.8.1",
    "numpy>=2.3.4",
    "nvidia-ml-py>=13.590.44",
    "psutil>=7.2.1",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
]

[tool.ruff.lint]
select = ["ALL"]
